2008-03-07  Kris Ford <krisford@email.unc.edu>
	* ADCnoisechar.m: modified documentation to better match Mathworks convention
	* analyze_staircase.m: same
	* condition_waveform.m: same
	* DACoperator.m: same
	* laser_spring_constant.m: same
	* log_drift.m: same
	* log_drift_herc.m: same
	* noisechar.m: same
	* stagenoisechar.m: same
	* teststreaks.m: same
	* .cvsignore: added
	* ADCnoisechar.m edited documentation added "ADC" to noisechar for help menu

2008-03-07  Jeremy Cribb <jcribb@email.unc.edu>
	* zerodaq.m: fixed typo (narg -> nargin)

2008-02-28  Jeremy Cribb <jcribb@email.unc.edu>
	* zerodaq.m: added DAQid as a parameter.

2006-08-10  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: Removed redundant text output when using the virtual dac board.

2006-08-09  Kalpit Desai <kvdesai@email.unc.edu>
	* DACoperator.m: Fixed several errors in the documentation. Now in sync with the code.
	
2006-07-25  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: added try-catch to contain "out of memory" error, and added another level to signal decimation.  Matlab gets ornery when plots exceed a million points or so.

2006-07-25  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: added decimation of signal sent to the daqtest plot.  Matlab gets ornery when plots exceed a million points or so.  A message is sent to text output warning of the decimation.

2006-07-07  Jeremy Cribb <jcribb@email.unc.edu>
  * DACoperator.m: changed default board to daqtest.  fixed bug in the reporting of active channels.

2006-06-09  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: used try-catch when querying available DAq boards.  Now you can use the "virtual" board on machines that have no DAq boards installed at all.

2006-06-05  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: 
		- changed default number of repeats to zero.  this means the default behavior is to run the input signal once (i.e. no repeats).
		- added repeats to virtual DAC output